--- a/style.scss
+++ b/style.scss
@@ -8,10 +8,8 @@ $font_1: 'Pacifico', cursive;
 .wrapper{
   width: 100%;
   height: 100%;
-  background-color: #939398;
-  // background-image: url(fon.jpg);
-  // background-repeat: repeat;
   position: relative;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 // *****
@@ -23,41 +21,35 @@ $font_1: 'Pacifico', cursive;
 header{
   position: relative;
   width: 100%;
+  background-image: url(img/bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-.start_screen{
-  display: flex;
-  flex-direction: row;
-  padding-top: 1em;
-  .logo{
+
+.logo{
     background-image: url(img/logo.png);
-    width: 18em;
-    height: 8em;
+    width: 100%;
+    height: 100%;
     background-size: contain;
     background-repeat: no-repeat;
-  }
-  .description{
-    align-self: center;
-    font-family: $font_1;
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    color: #ebb231;
-
-    h2:first-child{
-      align-self: center;
-    }
-    h2:last-child{
-      align-self: flex-end;
-    }
-  }
+    background-position: center;
+}
+.fix-categories{
+  width: 30%;
+  height: 80px;
 }
 nav{
   width: 100%;
-  padding: 1.2em 0;
-  background-color: #ebb231;
-
+  display: flex;
+  flex-direction: row;
+  .fix-menu{
+    width: 30%;
+    height: 50px;
+  }
   .menu{
+    width: 70%;
     display: flex;
+    height: 50px;
     align-items: center;
     font-size: 1.2em;
     text-align: center;
@@ -65,18 +57,27 @@ nav{
       align-items: center;
       flex-grow: 1;
       a{
-        color: #fff;
+        color: #000;
+        font-size: 0.85em;
+        font-weight: 300;
+      }
+      a:hover{
+        text-decoration: none;
       }
 
     }
   }
 }
-.slider{
-  position: relative;
-  img{
-    height: 600px;
-  }
+.container-logo{
+  width: 25%;
+  height: 110px;
+  background-color: #fff;
+  position: absolute;
+  top: 0;
+  left: 2%;
+  border-radius: 10px;
 }
+
 main{
   width: 100%;
   height: 100%;
@@ -86,112 +87,280 @@ main{
 }
 .catalog{
   width: 100%;
-  height: 500px;
+  height: 600px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  // background-image: url(img/bg.jpg);
+}
+.container-categories{
+  width: 100%;
+  background-color: #efefef;
+  // background-image: url(img/bg-categ.jpg);
+  background-position: center;
+  border-bottom: 1px solid #e2e2e2;
+  display: flex;
+  flex-direction: row;
 }
 .categories{
-  // width: 80%;
+  width: 70%;
   height: 80px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
+
   div{
-    color: #ebb231;
+    width: 18%;
+    // color: #ebb231;
+    color: #8a8a8a;
     height: 80px;
     padding-top: 22px;
+    text-align: center;
+    h3{
+      font-size: 1.3em;
+      font-weight: 400;
+      padding-top: 4px;
+    }
   }
   div:hover{
     cursor: pointer;
-    border-bottom: 6px solid #ebb231;
+    border-bottom: 4px solid #ebb231;
+    h3{
+      color: #ebb231;
+    }
   }
 }
 .active-cat{
-  border-bottom: 6px solid #ebb231;
+  border-bottom: 4px solid #ebb231;
+  h3{
+    color: #ebb231;
+  }
 }
 .categ-descr{
   width: 100%;
   height: 406px;
-  padding-top: 50px;
-  background-color: #fff;
+  padding-top: 180px;
   display: flex;
   flex-direction: column;
   align-items: center;
   .desc-div{
     display: none;
-    width: 900px;
+    width: 1000px;
     h1{
       float: left;
     }
     img{
-      width: 315px;
+      width: 316px;
       float: left;
+      z-index: 2;
+      position: absolute;
+      top: -20px;
+      left: 2%;
     }
     div{
-      width: 540px;
-      float: right;
-      padding-top: 50px;
-      a{
-        float: right;
-      }
+      float: left;
     }
-
+    .btn-cat{
+      float: right;
+      display: block;
+      margin-top: 30px;
+      width: 200px;
+      height: 40px;
+      text-align: center;
+      border: 2px solid #ebb231;
+      padding-top: 4px;
+      color: #ebb231;
+    }
+    .btn-cat:hover{
+      text-decoration: none;
+      color: #fff;
+      // border-color: #ebb231;
+      background-color: #ebb231;
+    }
+    .photo-categ{
+      width: 35%;
+    }
+    .photo-border{
+      width: 100%;
+      height: 215px;
+      border: 10px solid rgba(235, 178, 49, .7);
+      z-index: 1;
+      position: relative;
+      left: -20px;
+    }
+    .cat-text{
+      // padding-top: 85px;
+      width: 65%;
+      padding-top: 25px;
+    }
+    .deco-line{
+      width: 105%;
+      height: 1px;
+      background-color: #ebb231;
+      margin-left: -20px;
+    }
   }
 }
 .active{
   display: block !important;
 }
 
+// --------------- main -------------------
 
-.about-us{
-  color: #fff;
-  padding: 50px 0 50px 0;
-}
-.about-us-top{
-  padding: 30px 0 50px 0;
-}
-.deco-line-top{
+.why-us{
   width: 100%;
-  height: 6px;
-  background-color: #000;
-  margin-top: 30px;
-  // display: none;
+  height: 600px;
+  background-color: #efefef;
 }
-.about-us-bottom{
+.why-us-top{
+  width: 100%;
+  height: 100px;
+  background-color: #efefef;
+  border-bottom: 2px solid #e2e2e2;
+  text-align: center;
+  h2{
+    padding-top: 25px;
+    // color: #8a8a8a;
+    font-weight: 300;
+    // letter-spacing: 1px;
+  }
+}
+.why-us-bot{
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-}
-.about-us-text{
-  width: 40%;
-}
-.about-us-photo{
-  width: 40%;
-  padding-top: 100px;
-  img{
-    width: 80%;
+  .why-us-item{
+    width: 220px;
+    height: 400px;
+    margin-top: 15px;
   }
 }
+.icon{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  img{
+    width: 100px;
+    height: 100px;
+  }
+}
+.why-us-bot-text{
+  padding-top: 20px;
+  h5{
+    text-align: center;
+    height: 40px;
+    // color: #ebb231;
+  }
+  p{
+    font-weight: 300;
+    text-align: center;
+  }
+}
+
+// --------- gallery ----------
+
+.gallery-container{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  h2{
+    padding-top: 50px;
+    font-weight: 300;
+  }
+}
+
+.gallery{
+  width: 1100px;
+  height: 700px;
+  margin-top: 60px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 300px 300px;
+  grid-gap: 20px;
+  div{
+    position: relative;
+  }
+}
+.cat-gallery{
+  font-weight: 300;
+  padding-top: 50px;
+}
+.gallery-text{
+  width: 100%;
+  position: absolute;
+  bottom: 55px;
+  z-index: 3;
+  h3{
+    color: #ebb231;
+    text-align: center;
+    font-weight: 300;
+  }
+}
+.gallery-border{
+  width: 100%;
+  height: 215px;
+  border: 10px solid rgba(235, 178, 49, 0.7);
+  margin-top: 18px;
+  position: relative;
+  z-index: 1;
+  img{
+    width: 316px;
+    position: absolute;
+    top: -22px;
+    left: 8px;
+    z-index: 2;
+  }
+
+}
+
+
+// --------- footer ----------
+
 footer{
   width: 100%;
-  background-color: #fff;
+  background-color: #efefef;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .contacts{
-  padding: 50px 0 100px 0;
-  div{
-    text-align: center;
+  width: 100%;
+}
+.contacts-top{
+  width: 100%;
+  height: 100px;
+  border-bottom: 2px solid #e2e2e2;
+  text-align: center;
+  h2{
+    font-weight: 300;
+    padding-top: 29px;
   }
 }
 .contacts-inside{
+  width: 100%;
+  height: 420px;
+  padding-top: 100px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding: 50px 0 0 0;
+  h4{
+    font-weight: 300;
+  }
+  p{
+    font-weight: 300;
+  }
+}
+.contacts-deco-line{
+  width: 100%;
+  height: 1px;
+  background-color: #ebb231;
+  margin-bottom: 20px;
 }
 #map{
   width: 100%;
