--- a/style.scss
+++ b/style.scss
@@ -211,6 +211,11 @@ main{
 .active{
   display: block !important;
 }
+.active-animate{
+  -webkit-animation: fadeInRight100 .5s linear 0s forwards;
+  -moz-animation: fadeInRight100 .5s linear 0s forwards;
+  animation: fadeInRight100 .5s linear 0s forwards;
+}
 
 // --------------- main -------------------
 
@@ -421,6 +426,12 @@ footer{
   }
   p{
     font-weight: 300;
+    a{
+      color: #000;
+    }
+    a:hover{
+      text-decoration: none;
+    }
   }
 }
 .contacts-deco-line{
@@ -429,6 +440,7 @@ footer{
   background-color: #ebb231;
   margin-bottom: 20px;
 }
+
 #map{
   width: 100%;
   height: 400px;
